# import_anki_vocabulary_ocr_image_auto

./: .gitignore  AGENTS.md  README.md  pyproject.toml
anki-templates/mamino-vocabulary/: README.md  card-1-japanese-to-vietnamese-back.html  card-1-japanese-to-vietnamese-front.html  card-2-audio-to-japanese-back.html  card-2-audio-to-japanese-front.html  card-3-vietnamese-to-japanese-back.html  card-3-vietnamese-to-japanese-front.html  styling.css
csv/: lesson-01.csv  lesson-02.csv  lesson-03.csv  lesson-04.csv  lesson-05.csv
docs/agent/: architecture.md  data-contracts.md  overview.md  pitfalls.md  workflows.md
docs/superpowers/plans/: 2026-06-15-agent-docs.md
docs/usecases/: mamino-anki-vocabulary-usecases.md
examples/: README.md  lesson-01-input.json
history/: runs.json
input/: lesson-01-20260607-images.json  lesson-02-20260607-image.json  lesson-03-20260609-vocabulary.json  lesson-04-number-20260615-vocabulary.json  lesson-05-age-20260615-vocabulary.json
mamino_anki/: anki_importer.py  audio.py  cli.py  csv_store.py  history.py  models.py  processor.py  romaji.py
skills/mamino-anki-vocabulary/: SKILL.md
tests/: test_anki_importer.py  test_audio.py  test_cli.py  test_csv_store.py  test_history.py  test_models.py  test_processor.py  test_romaji.py
